fixed slots not showing

--- a/src/index.css
+++ b/src/index.css
@@ -793,3 +793,6 @@ body{
 	height:160px;
 }
 
+.appointment-list {
+	height:25rem;
+}
